# spark_to_rust_migration

./: .gitignore  README.md  docker-compose.yml  pipeline_comparison_report.html  requirements.txt
cleanup/: cleanup.py
config/: app_config.yaml
dashboard/: Dockerfile  app.py  metrics.py  requirements.txt
data_generator/: generator.py  run.py  schemas.py
delta_viewer/: viewer.py
docs/: pipeline_architecture.drawio  spark_vs_rust_medium_article.md
logs/: spark_job_report_v1_base_run.html
rust_pipeline/: Cargo.toml  Dockerfile
rust_pipeline/src/: account.rs  checkpoint.rs  config.rs  consumer.rs  main.rs  metrics.rs  schema.rs  validate.rs  writer.rs
rust_pipeline/src/transforms/: amount_features.rs  anonymized.rs  geo_features.rs  mod.rs  null_handling.rs  risk_features.rs  session_features.rs  time_dimensions.rs
scripts/: capture_dashboard_screenshots.py  generate_pipeline_report.py  setup.ps1  setup.sh  start_pipeline.sh  stop_pipeline.sh
spark_jobs/: account_upsert_job.py  batch_analytics_job.py  batch_job.py  metrics_bridge.py  spark_metrics_collector.py  streaming_job.py  transforms.py
