[package]
name = "rust-pipeline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-pipeline"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
deltalake = { version = "0.22", features = ["datafusion"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
anyhow = "1"
rayon = "1"
once_cell = "1"
comfy-table = ">=7.0, <7.2"
unicode-segmentation = ">=1.10, <1.13"
tokio-util = ">=0.7, <0.8"

[profile.release]
opt-level = 3
lto = "thin"
